# CMakeList.txt : CMake project for POO, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
set(CMAKE_CXX_STANDARD 11)
project ("POO")

# Add source to this project's executable.
add_executable (POO src/POO.cpp)

# TODO: Add tests and install targets if needed.
